DEVOPS-1556: Adapt tycho tests to java 17
DEVOPS-1556 (Switch default tycho build to java 17 )